Many editations. Fixed to a good flow.

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -47,7 +47,7 @@
 	\input{text/api.tex}
 	\input{text/daemon.tex}
 	\input{text/ControllerDesign.tex}
-	\input{text/PrototypeImplemtation.tex}
+	%\input{text/PrototypeImplemtation.tex} %LARS: Jeg synes egentlig det overordnede design allerede er forklaret, og jeg har tilføjet kort at det tilsvarer arduinoen tidligere i afsnitet. Vi har langt før det her forklaret at vi har valgt at bruge en Arduino og et RFID tag. Og det er altid op til vores uni-projekter at vise konceptet virker.
 	\input{text/ArduinoDesign.tex}
 	\input{text/usingCode.tex}
 	\input{text/usingEthernet.tex}
