--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -128,3 +128,34 @@ year = {December 2013},
 note ={\url{http://en.wikipedia.org/wiki/Internet_of_Things}}
 }
 
+@MISC{arduinoCC,
+author = {arduino},
+title = {Arduino's official website},
+howpublished = {Website},
+year = {December 2013},
+note ={\url{http://arduino.cc/}}
+}
+
+@MISC{teensyPJRC,
+author = {PJRC},
+title = {Teensy USB Development Board},
+howpublished = {Website},
+year = {December 2013},
+note ={\url{http://www.pjrc.com/teensy/}}
+}
+
+@MISC{raspberrypi,
+author = {Raspberry Pi},
+title = {Raspberry Pi Official website},
+howpublished = {Website},
+year = {December 2013},
+note ={\url{http://www.raspberrypi.org/}}
+}
+
+
+@Book{rfidAndNfc,
+  author =       {C. Patauner, H. Witschnig, D. Rinner, A. Maier, E. Merlin, E. Leitgeb},
+  title =        {High Speed RFID/NFC at the Frequency of 13.56 MHz},
+  publisher =    {Graz University of Technology},
+  year =         {2007},
+}
