--- a/report/text/problemStatement.tex
+++ b/report/text/problemStatement.tex
@@ -6,7 +6,8 @@ In this chapter a formal definition of the problem is written together with an e
 \begin{verse}
 \textit{Parents are not able to help their children administer their IT/TV consumption.\\
 This results in their children getting a lessened learning ability, a bad sleeping pattern and a higher risk of type 2 diabetes.\\
-How can hardware identification and webservices give parents the tools to help their children manage their media consumption?}
+How can hardware identification and webservices give parents the tools to help their children manage their media consumption?}\\
+To address this problem, we face the following technical challenges:
 	\begin{itemize}
 		\item How do we identify unique users in a subtle and child friendly way.
 		\item How do we enforce restrictions on media devices.
