--- a/report/text/systemOverviewDesign.tex
+++ b/report/text/systemOverviewDesign.tex
@@ -5,7 +5,7 @@ In this chapter the challenges from the problem statement are looked upon, and a
 
 \section{Designing a solution}
 During the design of the system it was decided, what type of hardware that would be needed to accommodate the challenges of the problem.\\
-In order to know what hardware was needed, was a design of the overall solution and designate functionality to components needed.\\
+In order to know what hardware was needed, a design of the overall solution and designation of functionality to components was needed.\\
 
 \subsection{Identify Unique Users}
 %How do we identify unique users in a subtle and child friendly way.
@@ -39,9 +39,9 @@ Next follows a section that puts the finishing touches on the system design and 
 \section{Media-Online Management} %name our system: temp name: Media-Online Management or MOM
 The Media-Online Management (MOM) is the name of the system which is our solution on the problem statement. To give an overview of the complete system a rich picture \citep{OOAD} have been made, see the figure \ref{fig:systemoverview}. The figure shows a home environment with a TV (media), computer and an internet connection, and it shows a server. 
 
-There are two main use patterns. The first is a parent who manage their MOM system using the website from a PC to add, change or delete system settings. The settings will from the server that host the website changed in the database as seen in the right side of the figure \ref{fig:systemoverview}. 
+There are two main use patterns. The first is a parent who manage their MOM system using the website from a PC to add, change or delete system settings. The settings will from the server that host the website changed in the database as seen in the right side of the figure \ref{fig:systemoverview}. \fixme{This sentence does not make sense.}
 
-The second use pattern is pictured in the left side of the figure. It is a child user who wants to use a media which in this case is the television. But to watch television it need power and its power source is blocked by the controller. So the child needs to scan his tag and then the controller sends a message to the server which then reply whether the television can be turned on or not. When the child is done he must scan again such that points can be withdrawn from his user profile. If the child does not have any points he cannot turn on the television nor can he turn it on if a rule or permission does not allow it. If a parent wants to watch television without being restricted in any way he can make a rule that gives him unlimited access, but he would still need to scan his tag before and after using the television. %\fixme{Vil vi lave en lille evaluering om vi synes det er fair at forældrene også skal scanne?}- nej
+The second use pattern is pictured in the left side of the figure. It is a child user who wants to use a media which in this case is the television. But to watch television it needs power and its power source is blocked by the controller. So the child needs to scan his tag and then the controller sends a message to the server which then reply whether the television can be turned on or not. When the child is done he must scan again such that points can be withdrawn from his user profile. If the child does not have any points he cannot turn on the television nor can he turn it on if a rule or permission does not allow it. If a parent wants to watch television without being restricted in any way he can make a rule that gives him unlimited access, but he would still need to scan his tag before and after using the television. %\fixme{Vil vi lave en lille evaluering om vi synes det er fair at forældrene også skal scanne?}- nej
 
 \begin{figure}
 	\centering
