--- a/report/text/futureWork.tex
+++ b/report/text/futureWork.tex
@@ -10,7 +10,7 @@ It would be nice if the points for doing a chore would be more automatized such 
 \textbf{Learn habits}\\
 It would be nice to implement a learning algorithm that could detect a pattern in the users behavior an example if a user regularly add points to the same user then the learning algorithm can detect a pattern and make a rule that will do this. 
 
-The data collected from this system could also be valuable statistics for studies with the users permission of course. So a data warehouse could be made to analysis the data. This data could also be used to marketing purposes. \\
+The data collected from this system could also be valuable statistics for studies with the users permission of course. So a data warehouse could be made to analysis the data. This data could also be used for marketing purposes. \\
 
 \textbf{Setup of controller}\\
 In section \vref{subsec:senarioD} we discussed how the system should be setup. The controller's internet connection is currently a wired connection. To make it more user friendly the controller should have WiFi connection. Then the setup of a controller will be more difficult because it is done manually. However this should be automatized such that it would be more user friendly. It could be that the user has a USB connector which can setup the wireless internet connection and add the controller to the database. 
@@ -18,7 +18,7 @@ In section \vref{subsec:senarioD} we discussed how the system should be setup. T
 Another possible improvement of the controller would be a wireless connection between the tag reader and the power controller device. Such that the user can scan his tag from the couch. This require some other hardware than what we had access to.\\
 
 \textbf{Error handling}\\
-The error handling for when connection between the controller and server is lost has not been fully design and implemented.  --More someone--\\
+The error handling for when connection between the controller and server is lost has not been fully design and implemented. \fixme{ --More someone--}\\
 
 \textbf{Calendar}\\
 Implement the calendar functionality fully. Where all the time bound rules are presented and the user should be able to make a rule in the calendar. It should be possible to show a calendar for one, some or all users. Other possible functionality could be import and export this calendar.\\
