--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -1,10 +1,10 @@
 \chapter{Testing of the Media-Online Management}
-There are different ways to evaluate the web interface e.g. an expert or user-based evaluation could be made. We would have preferred to make a user-based evaluation because this give a valuable input from a person who might use the system. However, to make such a sufficient user evaluation then we should find at least people with children which is between 5-14 years old and that would take too much time. A user-based evaluation of the entire MOM system would be optimal if the user and his/hers family could try it for a week or two before we interview them about the system. Also a log for our benefit could be made during this time to see how they use it of course with the test persons permission. Therefore to only evaluate the web interface we use an expert evaluation called Heuristic evaluation. 
+There are different ways to evaluate the web interface e.g. an expert or user-based evaluation could be made. We would have preferred to make a user-based evaluation because this gives a valuable input from a person who might use the system. However, to make such a sufficient user evaluation then we should find at least people with children which is between 5-14 years old and that would take too much time.\fixme{We could talk about how we tried to get test-users in the begining of the project.} A user-based evaluation of the entire MOM system would be optimal if the user and his/hers family could try it for a week or two before we interview them about the system. Also a log for our benefit could be made during this time to see how they use it of course with the test persons permission. Therefore we can only evaluate the web interface. For this we use an expert evaluation called Heuristic evaluation. 
 
 \section{Heuristic evaluation in Theory}
 In a Heuristic evaluation the test persons look for errors and potential usability errors which can be categorized in 12 item and divided into 3 groups\citep{DIEB}, which is shortly described below:
 \begin{description}
-\item[Learnability] make it ease for the user to learn and remembering the system:
+\item[Learnability] make it easy for the user to learn and remember the system:
 \begin{itemize}
 	\item Visibility - make it clear for the user which functions are available in the system and show what the system is doing.
 	\item Consistency - be consistent in the design features and let it be similar to other comparable systems
@@ -12,7 +12,7 @@ In a Heuristic evaluation the test persons look for errors and potential usabili
 	\item Affordance -  E.g. if it looks like a button, it is a button. 
 \end{itemize}
 
-\item[Effectiveness] is who ease it is for the user to use it and how safe it is to use:
+\item[Effectiveness] is how easy it is for the user to use it and how safe it is to use:
 \begin{itemize}
 	\item Navigation - provide support to enable people to move around. Make clear navigation instructions.
 	\item Control - make it clear who and what is in control, the user should be able to take control. There should be a connection between what happens in the system and what will happen outside of the system. 
@@ -29,7 +29,7 @@ In a Heuristic evaluation the test persons look for errors and potential usabili
 \end{itemize}
 \end{description}
 
-Typically the test is done by 1-3 test persons\citep{HeuristicEvaluation}. The test person should be a usability experts or a software developer with the expertise in a relevant system. To make the test they should have relevant information of the user and a set of task to follow but they are also allowed to make their own.
+Typically the test is done by 1-3 test persons\citep{HeuristicEvaluation}. The test person should be a usability expert or a software developer with the expertise in a relevant system. To make the test they should have relevant information of the user and a set of tasks to follow but they are also allowed to make their own.
 
 
 \section{Heuristic Evaluation of Media-Online Management}
@@ -38,11 +38,12 @@ Before performing a Heuristic evaluation we need to determine what is needed bef
 \subsection{Planning the Evaluation}
 When planing the evaluation the test persons need to get test persons. They need to get a small description of the user and some test cases. They should also get a list of the heuristics from which the system need to be evaluated from. This should all be made prior to the evaluation. \\
 
-The evaluation of Media-online Management system is being done by test persons in the group which have been highly involved in the development of system. This is not optimal in this test where the test persons should be an usability expert from outside the development group\citep{DIEB}.\\
+The evaluation of Media-online Management system is being done by test persons in the group which have been highly involved in the development of the system. This is not optimal in this test where the test persons should be an usability expert from outside the development group\citep{DIEB}.\\
 
-The test persons also need to know the user. So the test persons need a general description of the user and their technology capabilities. The user of MOM is parents and children. The children is only in contact with the controller and the parents are both using the controller and the website. The parents has a general experience with the internet, but they are not experts. However we expect them to be able to at least set up an e-mail account with Google or Hotmail. The children has few technology skill but they are capable to turn on a normal television. \\
+The test persons also need to know the user. So the test persons need a general description of the user and their technology capabilities. The user of MOM is parents and children. The children is only in contact with the controller and the parents are both using the controller and the website. The parents has a general experience with the internet, but they are not experts. However we expect them to be able to at least set up an e-mail account with Google or Hotmail. The children has few technology skills but they are capable to turn on a normal television. \\
+\fixme{Maybe edit lastline to: ''but we expect our target group to be able to turn on a normal television.''}
 
-Before the test is conducted some test cases should be made the development team. This should cover several cases in the system such that the test persons is presented to every aspect of the system. The test cases of MOM can be found in section \vref{sec:testcase}.\\ 
+Before the test is conducted some test cases should be made by the development team. This should cover several cases in the system such that the test persons is presented to every aspect of the system. The test cases of MOM can be found in section \vref{sec:testcase}.\\ 
 
 
 We want to primarily be validated on....
