--- a/report/text/usingEthernet.tex
+++ b/report/text/usingEthernet.tex
@@ -1,13 +1,13 @@
 \subsection{Using the Ethernet Shield.}
 \label{sec:ethernetshield}
-\fixme{Mangler kort kommentar om hvorfor Ethernat er brugt istedet for en Wifi connection}
-The Ethernet shield is the primary component in accessing the API as it allows for the Arduino to access the web as a client.
+%\fixme{Mangler kort kommentar om hvorfor Ethernat er brugt istedet for en Wifi connection} Er håndteret tidligere, i design afsnittet.
+The Ethernet shield is the primary component in accessing the API as it allows for the Arduino to access the internet as a client.
 We use the Ethernet shield along with a JSON parser in order to make HTML requests on the web site that contains the system API and decode its responce.
 
-The Ethernet Shield comes with an MAC address printed on the side which is used to automatically obtain an IP Address.
+The Ethernet Shield comes with a MAC address printed on the side which is used to automatically obtain an IP Address.
 This along with the target server is established as global variables as seen in \autoref{EthStart} along with the Method call in \verb|Setup()| that establishes a connection with the LAN. All supplied from the Arduino Library \verb|Ethernet.h|.
-\fixme{kunne være korte statement på sær funktioner for eksemple F står for når du printer} 
-\fixme{linje 22, Hvad sker der så, er det bare en død Audrino?}
+%\fixme{kunne være korte statement på sær funktioner for eksemple F står for når du printer} Fjernet print linjen.
+%\fixme{linje 22, Hvad sker der så, er det bare en død Audrino?} Forældet kommentar
 
 \begin{lstlisting}[frame=single, label=EthStart, caption=The Method Calls used to establish and maintain a connection.]
 //The Mac Address declared.
@@ -21,7 +21,6 @@ char server[] = "spcadmin.tk";
 if (Ethernet.begin(mac) == 0) 
 {
   //If the Evaluation returns 0 it fails and stops doing anything.
-	Serial.println(F("Failed to configure Ethernet using DHCP"));
 	while(true); 
 }
 
@@ -37,15 +36,15 @@ The process is almost identical in either case and can be divided into two parts
 	\item Parsing the servers Reply.
 \end{itemize}
 
-As seen in \autoref{pageConnect} the Device ID and the Tag ID is connected in a char array to form the url which complies with the action that is being performed. \fixme{connect this to the API implmentation}
+As seen in \autoref{pageConnect} the Device ID and the Tag ID is connected in a char array to form the url which complies with the action that is being performed. For more information on the API see chapter \vref{chap:api}.
 Then in return the Ethernet Shield receives the HTML Page, and in \autoref{pageDecipher} the Arduino reads this information one byte at the time where all but the JSON string is stripped and stored in a char pointer.
-When all the bytes have been through this progress the connection is closed and the JSON string is parsed the result of the action. This can be seen in \autoref{pageJSON}.
+When all the bytes have been through this process the connection is closed and the JSON string is parsed the result of the action. This can be seen in \autoref{pageJSON}.
 \begin{lstlisting}[frame=single, label=pageConnect, caption=Connecting to the Server and creating an HTML request.]
 void turnOn(void)
 {
   if(client.connect(server, 80))
   {
-    Serial.println(F("Connected")); 
+    //Connected
 
     client.print(F("GET /api/api.php/turnOn/"));
     client.print(devID);
@@ -56,7 +55,7 @@ void turnOn(void)
     client.println(F("Connection: close"));
     client.println();
     
-    Serial.println(F("Message Sent"));
+    //Message Sent
 \end{lstlisting}
 
 \begin{lstlisting}[frame=single, label=pageDecipher, caption=Removing all but the important information from the website.]
